Function to get certs for user