@@ -2,6 +2,7 @@ package com.trackdatcert.repositories.certificate;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import com.trackdatcert.repositories.certificate.model.CertificateEntityDTO;
 import com.trackdatcert.repositories.certificate.model.TrackedCertificateEntityDTO;
@@ -13,13 +14,34 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.dao.EmptyResultDataAccessException;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
+import org.springframework.transaction.annotation.Transactional;
 
 @SpringBootTest
+@Transactional //rollback after each test
 class TestTrackedCertificateRepository {
 
     @Autowired
     private DataSource dataSource;
     private TrackedCertificateRepository trackedCertificateRepository;
+
+    private final String userId = "userAbc";
+
+    private CertificateEntityDTO.CertificateEntityDTOBuilder certificateEntityDTOBuilder =
+        CertificateEntityDTO.builder()
+            .trackedCertificateEntityId(1)
+            .id(1)
+            .validFrom(1)
+            .validTo(2)
+            .commonName("myCommonName")
+            .issuer("myIssuer");
+
+    private TrackedCertificateEntityDTO.TrackedCertificateEntityDTOBuilder trackedCertificateEntityDTOBuilder =
+        TrackedCertificateEntityDTO.createBuilder()
+            .name("myName")
+            .description("myDescription")
+            .url("myUrl")
+            .certificateType(1)
+            .createdByUserId(userId);
 
     @BeforeEach
     void setup() {
@@ -29,21 +51,10 @@ class TestTrackedCertificateRepository {
 
     @Test
     void testSaveTrackedCertificate() {
-        var certDto = CertificateEntityDTO.builder()
-            .trackedCertificateEntityId(1)
-            .id(1)
-            .validFrom(1)
-            .validTo(2)
-            .commonName("myCommonName")
-            .issuer("myIssuer")
+        var certDto = certificateEntityDTOBuilder
             .build();
-        var dto = TrackedCertificateEntityDTO.createBuilder()
-            .name("myName")
-            .description("myDescription")
-            .url("myUrl")
-            .certificateType(1)
+        var dto = trackedCertificateEntityDTOBuilder
             .certificates(List.of(certDto))
-            .createdByUserId("userAbc")
             .build();
 
         trackedCertificateRepository.saveTrackedCertificate(dto);
@@ -56,7 +67,7 @@ class TestTrackedCertificateRepository {
         assertEquals(dto.getCreatedByUserId(), trackedCert.getCreatedByUserId());
 
         assertEquals(1, trackedCert.getCertificates().size());
-        var storedCertDto = trackedCert.getCertificates().get(0);
+        var storedCertDto = trackedCert.getCertificates().getFirst();
         assertEquals(certDto.getCommonName(), storedCertDto.getCommonName());
         assertEquals(certDto.getIssuer(), storedCertDto.getIssuer());
     }
@@ -64,5 +75,33 @@ class TestTrackedCertificateRepository {
     @Test
     void testGetTrackedCertificate_whenNotExists() {
         assertThrows(EmptyResultDataAccessException.class, () -> trackedCertificateRepository.getTrackedCertificate("nonExisting"));
+    }
+
+    @Test
+    void testGetTrackedCertificateCreatedByUserId() {
+        var certDto = certificateEntityDTOBuilder
+            .build();
+        var dto = trackedCertificateEntityDTOBuilder
+            .certificates(List.of(certDto))
+            .build();
+
+        trackedCertificateRepository.saveTrackedCertificate(dto);
+
+        certDto = certificateEntityDTOBuilder
+            .build();
+        dto = trackedCertificateEntityDTOBuilder
+            .certificates(List.of(certDto))
+            .name("abc")
+            .build();
+        trackedCertificateRepository.saveTrackedCertificate(dto);
+
+        var result = trackedCertificateRepository.getTrackedCertificatesCreatedByUserId(userId);
+        assertEquals(2, result.size());
+    }
+
+    @Test
+    void testGetTrackedCertificateCreatedByUserId_whenNoCerts() {
+        var result = trackedCertificateRepository.getTrackedCertificatesCreatedByUserId(userId);
+        assertTrue(result.isEmpty());
     }
 }
